my-electron-app/styles/card.css
.card{
	padding: 20px;
	border-radius: 15px;

	flex: 1 1;
	max-width: 480px;
	min-width: 280px;
	min-height: 180px;
	margin: 10px;

	background: var(--cardbg);
	transition: 0.4s ease-in-out !important;
}

@media only screen and (max-width: 1424px) {
	.card{
		max-width: 45%;
	}
}

@media only screen and (max-width: 1006px) {
	.card{
		max-width: 100%;
	}
}

.card * {
	transition: 0.4s ease-in-out !important;
}

.card h1, .card h2, .card h3{
	margin: 0px;
	font-weight: unset;
}

.card h1 {
	font-size: 26px;
	font-family:"rajdhani", system-ui, Arial sans-serif;
	font-weight: 600;
	font-stretch:extra-expanded;
	letter-spacing: 1px;
	margin-bottom: 10px;
}

.row-details{
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content:space-evenly;

	width: 100%;
}

.card .column {
	display: flex;
	flex-direction: column;
	width: 100%;
	margin: 10px;
}

.card table {
	width: 60%;
}

.card th {
	font-weight: unset;
	text-align: left;
}

.card td {
	text-align: right;
}

.card tr {
	display:flex;
	justify-content: space-between;
	border-bottom: 1px solid white !important;
	margin-bottom: 6px;
}

.card td, .card th, .card tr {
	font-size: 14px;
}

.card p {
	font-size: 14px;
}

/* Icon */
.card .material-symbols-rounded {
	width: 100px;
	height: 100px;
	font-size: 100px;
	padding: 10px;
}


.card p{
	margin: 10px;
	text-align: center;
}

.netcard {
	min-height: unset;
	width: 300px;
}

.netcard table {
	width: 100%;
}

.net-header{
	display:flex;
	justify-content: space-between;
	align-items: center;

	width: 100%;
	margin-bottom: 5px;
}

.net-header h1{
	margin: 0px;
	font-size: 22px;
	display:flex;
	align-items: center;
}

.subheader {
	display: flex;
	justify-content: center;
	color: rgba(255, 255, 255, 0.383);
	
	width: 100%;
	margin-bottom: 10px;
}

.divline {
	width: 100%;
	background-color: white;
	height: 1px;
}

.block {
	height: 50px;
	width: 70px;
	margin: 10px 5px;

	display: flex;
	align-items: center;
	justify-content: center;
}

h4 {
	font-size: 14px;
	margin: 0px 0px 6px 0px;
	font-weight: unset;
}

.netcontainer, #netadapterContainer, #diskContainer{
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
}

.portblock{
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;

	background-color: var(--portbg);
	border-radius: 15px;

	padding: 15px;
	margin: 5px;
	width: 70px;
	height: 70px;
}

.portblock h1, .portblock h2, .portblock h3, .portblock h4{
	margin: 5px 0px 5px 0px;
}

.portblock h2 {
	font-size: 22px;
}

.adaptercard {
	max-width: 190px;
	min-width: 190px;
	display: flex;
	flex-direction: column;
	align-items: center;
	flex-wrap: wrap;
}

.adaptercard p {
	height: 45px;
    display: flex;
    align-items: center;
}

.adaptercard img{
	height: 80px;
	width: 80px;
	margin: 10px;
}

.adaptercard table{
	width: 100%;
}

#commandhistory {display: none;}

.logcontainer{
	position: fixed;
	z-index: 39;
	height: 100%;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: rgba(18, 19, 39, 0.33);
}

.logcontainer .loghead {
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 60px;
	width: 100%;
	padding: 0;
	box-sizing: border-box;
	background: var(--histbg);
	position: sticky;
	top: 0;
	z-index: 1; /* stay above the scrollable area */
}

.logcontainer .loghead .button {
	height: 25px;
	width: 25px;
	background: none;
}

.popupcard {
	display: flex;
	flex-direction: column;
	align-items: stretch;
	position: fixed;
	z-index: 40;
	height: 70%;
	max-height: 70%;
	border-radius: 7px;
	width: 70%;
	max-width: 700px;
	min-width: 400px;
	overflow: hidden; /* prevent overflow */
	overflow-y: scroll;
	scrollbar-color: var(--indigo) transparent;
	scroll-behavior: smooth;
	background-color: black;

	box-shadow: 0px 0px 20px var(--histshadow);
}

.popupcard h1{
	font-family:"rajdhani", system-ui, Arial sans-serif;
	margin: 5px;
	font-size: 22px;
}

.commandlist {
	font-family: monospace;
	background-color: black;
	padding: 20px;
	flex-grow: 1; /* this makes it take up remaining space */
	width: 100%;
	overflow-y: auto;
	overflow-x: hidden;
}


.commandlist tbody tr {
	display: flex;
	justify-content: flex-start;
}

.commandlist tbody td {
	margin: 3px;
}

